--- a/Fastlane Runner/Supporting Files/Info.plist
+++ b/Fastlane Runner/Supporting Files/Info.plist
@@ -19,9 +19,15 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.developer-tools</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>LSUIElement</key>
+	<true/>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>Needs permissions to access Terminal</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2020 Vasilev. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
@@ -32,5 +38,7 @@
 	<true/>
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
